syntax = "proto3";
package Protocol;
option java_package = "com.cat.server.game.data.proto";
option java_outer_classname = "PBDefine";

/*
*生成规则
*请求协议号=模块id*1000+请求协议号
*返回协议号=模块id*1000+100+返回协议号
*/
enum PBProtocol {
   AckTips=1001;
   ReqLogin=100001;
   AckLogin=100002;
   ReqRandName=100003;
   AckRandName=100004;
   ReqCreateRole=100005;
   AckCreateRole=100006;
   AckEnterGame=100007;
   ReqPlayerCreateRole=101001;
   AckPlayerCreateRole=101002;
   ReqPlayerReLogin=101003;
   AckPlayerReLogin=101004;
   ReqPlayerRandName=101005;
   AckPlayerRandName=101006;
   ReqPlayerLogin=101007;
   AckPlayerLogin=101008;
   ReqPlayerHeart=101009;
   AckPlayerHeart=101010;
   AckPlayerDisconnect=101011;
   AckPlayerEnterGame=101012;
   AckInitPlayerInfo=101013;
   AckUpdatePlayerInfo=101014;
   ReqItemUse=102001;
   AckItemUse=102002;
   ReqItemSell=102003;
   AckItemSell=102004;
   AckItemUpdate=102005;
   AckRewards=102006;
   AckItemDelete=102007;
   ReqMailReward=103001;
   AckMailReward=103002;
   ReqMailRead=103003;
   AckMailRead=103004;
   ReqMailList=103005;
   AckMailList=103006;
   ReqMailDelete=103007;
   AckMailDelete=103008;
   ReqChat=104001;
   AckChat=104002;
}
